--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "cakephp/plugin-installer": "~1.0",
         "cakedc/users": "^5.0",
         "3xw/attachment": "3.5.*",
-        "3xw/cakephp-utils": "3.5.*"
+        "3xw/cakephp-utils": "3.5.*",
+        "3xw/cakephp-bake": "3.4.*"
     },
     "require-dev": {
         "psy/psysh": "@stable",
