--- a/composer.json
+++ b/composer.json
@@ -1,59 +1,51 @@
 {
-    "name": "3xw/cakephp-app",
-    "description": "3xw CakePHP skeleton app",
-    "homepage": "https://cakephp.org",
-    "type": "project",
-    "require": {
-        "php": ">=5.6",
-        "cakephp/cakephp": "3.5.*",
-        "mobiledetect/mobiledetectlib": "2.*",
-        "cakephp/migrations": "~1.0",
-        "cakephp/plugin-installer": "~1.0",
-        "cakedc/users": "^5.0",
-        "3xw/attachment": "3.5.*",
-        "3xw/cakephp-utils": "3.5.*",
-        "3xw/cakephp-bake": "3.4.*"
-    },
-    "require-dev": {
-        "psy/psysh": "@stable",
-        "cakephp/debug_kit": "~3.2",
-        "cakephp/bake": "~1.1",
-        "cakephp/cakephp-codesniffer": "^3.0"
-    },
-    "repositories": [
-      {
-        "type": "composer",
-        "url": "https://packages.3xw.ch"
-      }
+  "name": "3xw/cakephp-app",
+  "description": "3xw CakePHP skeleton app",
+  "homepage": "https://cakephp.org",
+  "type": "project",
+  "require": {
+    "php": ">=5.6",
+    "cakephp/cakephp": "3.6.*",
+    "cakephp/migrations": "^1.8.0",
+    "cakephp/plugin-installer": "^1.0",
+    "josegonzalez/dotenv": "3.*",
+    "mobiledetect/mobiledetectlib": "2.*",
+    "cakedc/users": "^7.0",
+    "3xw/attachment": "^3.5",
+    "3xw/cakephp-utils": "^3.5",
+    "3xw/cakephp-bake": "^3.4"
+  },
+  "require-dev": {
+    "psy/psysh": "@stable",
+    "cakephp/debug_kit": "~3.2",
+    "cakephp/bake": "~1.1",
+    "cakephp/cakephp-codesniffer": "^3.0"
+  },
+  "suggest": {
+    "dereuromark/cakephp-queue": "nice plugin force queued tasks"
+  },
+  "autoload": {
+    "psr-4": {
+      "App\\": "src"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "App\\Test\\": "tests",
+      "Cake\\Test\\": "./vendor/cakephp/cakephp/tests"
+    }
+  },
+  "scripts": {
+    "post-install-cmd": "App\\Console\\Installer::postInstall",
+    "post-create-project-cmd": "App\\Console\\Installer::postInstall",
+    "post-autoload-dump": "Cake\\Composer\\Installer\\PluginInstaller::postAutoloadDump",
+    "check": [
+      "@test",
+      "@cs-check"
     ],
-    "suggest": {
-        "dereuromark/cakephp-queue": "nice plugin force queued tasks",
-        "awallef/cakephp-redis": "redis plugin",
-        "awallef/cakephp-cache": "cache plugin",
-        "awallef/cakephp-cw-log": "log in aws console"
-    },
-    "autoload": {
-        "psr-4": {
-            "App\\": "src"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "App\\Test\\": "tests",
-            "Cake\\Test\\": "./vendor/cakephp/cakephp/tests"
-        }
-    },
-    "scripts": {
-        "post-install-cmd": "App\\Console\\Installer::postInstall",
-        "post-create-project-cmd": "App\\Console\\Installer::postInstall",
-        "post-autoload-dump": "Cake\\Composer\\Installer\\PluginInstaller::postAutoloadDump",
-        "check": [
-            "@test",
-            "@cs-check"
-        ],
-        "cs-check": "phpcs --colors -p --standard=vendor/cakephp/cakephp-codesniffer/CakePHP ./src ./tests",
-        "cs-fix": "phpcbf --colors --standard=vendor/cakephp/cakephp-codesniffer/CakePHP ./src ./tests",
-        "test": "phpunit --colors=always"
-    },
-    "prefer-stable": true
+    "cs-check": "phpcs --colors -p --standard=vendor/cakephp/cakephp-codesniffer/CakePHP ./src ./tests",
+    "cs-fix": "phpcbf --colors --standard=vendor/cakephp/cakephp-codesniffer/CakePHP ./src ./tests",
+    "test": "phpunit --colors=always"
+  },
+  "prefer-stable": true
 }
