--- a/composer.json
+++ b/composer.json
@@ -1,51 +1,59 @@
 {
-  "name": "3xw/cakephp-app",
-  "description": "3xw CakePHP skeleton app",
-  "homepage": "https://cakephp.org",
-  "type": "project",
-  "require": {
-    "php": ">=5.6",
-    "cakephp/cakephp": "3.6.*",
-    "cakephp/migrations": "^1.8.0",
-    "cakephp/plugin-installer": "^1.0",
-    "josegonzalez/dotenv": "3.*",
-    "mobiledetect/mobiledetectlib": "2.*",
-    "cakedc/users": "^7.0",
-    "3xw/attachment": "^3.5",
-    "3xw/cakephp-utils": "^3.5",
-    "3xw/cakephp-bake": "^3.4"
-  },
-  "require-dev": {
-    "psy/psysh": "@stable",
-    "cakephp/debug_kit": "~3.2",
-    "cakephp/bake": "~1.1",
-    "cakephp/cakephp-codesniffer": "^3.0"
-  },
-  "suggest": {
-    "dereuromark/cakephp-queue": "nice plugin force queued tasks"
-  },
-  "autoload": {
-    "psr-4": {
-      "App\\": "src"
+    "name": "cakephp/app",
+    "description": "CakePHP skeleton app",
+    "homepage": "https://cakephp.org",
+    "type": "project",
+    "license": "MIT",
+    "require": {
+        "php": ">=5.6",
+        "cakephp/cakephp": "^3.7",
+        "cakephp/migrations": "^2.0.0",
+        "cakephp/plugin-installer": "^1.0",
+        "mobiledetect/mobiledetectlib": "2.*",
+        "cakedc/users": "^8.0",
+        "3xw/attachment": "^3.7.0",
+        "3xw/cakephp-utils":"^3.5",
+        "3xw/cakephp-tinymce": "^3.6"
+    },
+    "require-dev": {
+        "cakephp/bake": "^1.9.0",
+        "cakephp/cakephp-codesniffer": "^3.0",
+        "cakephp/debug_kit": "^3.17.0",
+        "josegonzalez/dotenv": "3.*",
+        "phpunit/phpunit": "^5|^6",
+        "psy/psysh": "@stable",
+        "3xw/cakephp-bake": "dev-master as 3.7.0"
+    },
+    "suggest": {
+        "admad/cakephp-i18n": "i18n",
+        "friendsofcake/crud": "Rest API",
+        "3xw/cakephp-elastic-search": "Elastic Search"
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "App\\Test\\": "tests/",
+            "Cake\\Test\\": "vendor/cakephp/cakephp/tests/"
+        }
+    },
+    "scripts": {
+        "post-install-cmd": "App\\Console\\Installer::postInstall",
+        "post-create-project-cmd": "App\\Console\\Installer::postInstall",
+        "post-autoload-dump": "Cake\\Composer\\Installer\\PluginInstaller::postAutoloadDump",
+        "check": [
+            "@test",
+            "@cs-check"
+        ],
+        "cs-check": "phpcs --colors -p --standard=vendor/cakephp/cakephp-codesniffer/CakePHP src/ tests/",
+        "cs-fix": "phpcbf --colors --standard=vendor/cakephp/cakephp-codesniffer/CakePHP src/ tests/",
+        "test": "phpunit --colors=always"
+    },
+    "prefer-stable": true,
+    "config": {
+        "sort-packages": true
     }
-  },
-  "autoload-dev": {
-    "psr-4": {
-      "App\\Test\\": "tests",
-      "Cake\\Test\\": "./vendor/cakephp/cakephp/tests"
-    }
-  },
-  "scripts": {
-    "post-install-cmd": "App\\Console\\Installer::postInstall",
-    "post-create-project-cmd": "App\\Console\\Installer::postInstall",
-    "post-autoload-dump": "Cake\\Composer\\Installer\\PluginInstaller::postAutoloadDump",
-    "check": [
-      "@test",
-      "@cs-check"
-    ],
-    "cs-check": "phpcs --colors -p --standard=vendor/cakephp/cakephp-codesniffer/CakePHP ./src ./tests",
-    "cs-fix": "phpcbf --colors --standard=vendor/cakephp/cakephp-codesniffer/CakePHP ./src ./tests",
-    "test": "phpunit --colors=always"
-  },
-  "prefer-stable": true
 }
