--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "vendorFront": "webpack --env.prefix=front --config-name vendorConfig",
     "vendorAdmin": "webpack --env.prefix=admin --config-name vendorConfig",
     "watchFront": "webpack --env.prefix=front --config-name themeAppConfig",
-    "watchAdmin": "webpack --env.prefix=admin --config-name themeAppConfig",
-    "vueFront": "webpack --env.prefix=front --config-name vueConfig",
-    "vueAdmin": "webpack --env.prefix=admin --config-name vueConfig"
+    "watchAdmin": "webpack --env.prefix=admin --config-name themeAppConfig"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +17,7 @@
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/preset-env": "^7.3.4",
     "css-loader": "^2.1.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
     "postcss-loader": "^3.0.0",
@@ -33,8 +32,10 @@
     "babel-loader": "^8.0.5",
     "bootstrap": "^4.3.1",
     "cssnano": "^4.1.10",
+    "jquery": "^3.3.1",
     "pixrem": "^5.0.0",
     "postcss-preset-env": "^6.5.0",
+    "vue": "^2.6.8",
     "vue-loader": "^15.7.0",
     "vue-resource": "^1.5.1",
     "vue-style-loader": "^4.1.2",
