--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,5 @@ Thumbs.db
 # Webpack ENV && built assets files #
 #####################################
 /webpack.env
+/webroot/css/*
+/webroot/js/*
