--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@babel/preset-env": "^7.3.4",
     "css-loader": "^2.1.0",
     "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^3.0.1",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
     "postcss-loader": "^3.0.0",
+    "resolve-url-loader": "^3.1.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^2.1.2",
