--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,9 @@
     "license": "MIT",
     "require": {
         "php": ">=7.2",
+        "3xw/attachment": "next-dev",
+        "3xw/cakephp-utils": "next-dev",
+        "cakedc/users": "9.next-dev",
         "cakephp/cakephp": "4.x-dev",
         "cakephp/plugin-installer": "^1.0",
         "mobiledetect/mobiledetectlib": "2.*"
