--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,7 @@
         "php": ">=7.2",
         "3xw/attachment": "next-dev",
         "3xw/cakephp-utils": "next-dev",
-        "cakephp/authentication": "2.x-dev",
-        "cakephp/authorization": "2.x-dev",
+        "cakedc/users": "9.next-dev",
         "cakephp/cakephp": "4.x-dev",
         "cakephp/plugin-installer": "^1.0",
         "mobiledetect/mobiledetectlib": "2.*"
