--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "autoprefixer": "^9.4.10",
+    "axios": "^0.19.0",
     "babel-loader": "^8.0.5",
     "bootstrap": "^4.3.1",
     "cssnano": "^4.1.10",
@@ -46,7 +47,11 @@
     "vue": "^2.6.8",
     "vue-loader": "^15.7.0",
     "vue-resource": "^1.5.1",
+    "vue-router": "^3.1.2",
     "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.6.8"
+    "vue-template-compiler": "^2.6.8",
+    "vuex": "^3.1.1",
+    "vuex-crud": "^0.3.2",
+    "vuex-easy-access": "^3.1.7"
   }
 }
