--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "postcss-preset-env": "^6.6.0",
     "vue": "^2.6.8",
     "vue-loader": "^15.7.0",
+    "vue-packery-plugin": "^1.4.8",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.1.2",
     "vue-style-loader": "^4.1.2",
