--- a/composer.json
+++ b/composer.json
@@ -6,20 +6,20 @@
     "license": "MIT",
     "require": {
         "php": ">=7.2",
-        "3xw/attachment": "next-dev",
-        "3xw/cakephp-bake": "next-dev",
-        "cakedc/users": "9.next-dev",
-        "cakephp/cakephp": "4.x-dev#dc63aec20772ab08b60340110cb759897f8159a6",
-        "cakephp/plugin-installer": "^1.0",
-        "mobiledetect/mobiledetectlib": "2.*"
+        "3xw/attachment": "dev-master as 4.0.0.0",
+        "cakedc/users": "^9.0.0",
+        "cakephp/cakephp": "^4.0",
+        "cakephp/migrations": "^3.0",
+        "cakephp/plugin-installer": "^1.2",
+        "mobiledetect/mobiledetectlib": "^2.8"
     },
     "require-dev": {
+        "3xw/cakephp-bake": "~4.0.0",
         "cakephp/bake": "4.x-dev",
-        "cakephp/cakephp-codesniffer": "dev-next",
-        "cakephp/debug_kit": "4.x-dev",
-        "cakephp/migrations": "4.x-dev",
-        "josegonzalez/dotenv": "3.*",
-        "phpunit/phpunit": "^8.0",
+        "cakephp/cakephp-codesniffer": "~4.0.0",
+        "cakephp/debug_kit": "^4.0",
+        "josegonzalez/dotenv": "^3.2",
+        "phpunit/phpunit": "^8.5",
         "psy/psysh": "@stable"
     },
     "repositories": [
@@ -30,7 +30,8 @@
     ],
     "suggest": {
         "markstory/asset_compress": "An asset compression plugin which provides file concatenation and a flexible filter system for preprocessing and minification.",
-        "dereuromark/cakephp-ide-helper": "After baking your code, this keeps your annotations in sync with the code evolving from there on for maximum IDE and PHPStan compatibility."
+        "dereuromark/cakephp-ide-helper": "After baking your code, this keeps your annotations in sync with the code evolving from there on for maximum IDE and PHPStan/Psalm compatibility.",
+        "phpstan/phpstan": "PHPStan focuses on finding errors in your code without actually running it. It catches whole classes of bugs even before you write tests for the code."
     },
     "autoload": {
         "psr-4": {
@@ -54,7 +55,6 @@
         "cs-check": "phpcs --colors -p --standard=vendor/cakephp/cakephp-codesniffer/CakePHP src/ tests/",
         "cs-fix": "phpcbf --colors --standard=vendor/cakephp/cakephp-codesniffer/CakePHP src/ tests/",
         "stan": "phpstan analyse src/",
-        "stan-setup": "cp composer.json composer.backup && composer require --dev phpstan/phpstan-shim:^0.11 && mv composer.backup composer.json",
         "test": "phpunit --colors=always"
     },
     "prefer-stable": true,
