--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "3xw/attachment": "dev-master as 4.0.0.0",
         "cakedc/users": "^9.0.0",
         "cakephp/cakephp": "^4.0",
+        "cakephp/bake": "^2.0.3",
         "cakephp/migrations": "^3.0",
         "cakephp/plugin-installer": "^1.2",
         "mobiledetect/mobiledetectlib": "^2.8"
