--- a/package.json
+++ b/package.json
@@ -10,40 +10,41 @@
     "watchAdmin": "webpack --env.prefix=admin --config webpack.dev.js --config-name themeAppConfig",
     "build": "webpack --env.prefix=admin --config webpack.prod.js && webpack --env.prefix=front --config webpack.prod.js"
   },
+  "browserslist": "last 10 versions",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.3.4",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/preset-env": "^7.3.4",
-    "css-loader": "^2.1.0",
+    "@babel/core": "^7.10.5",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/preset-env": "^7.10.4",
+    "css-loader": "^2.1.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^3.0.1",
     "mini-css-extract-plugin": "^0.5.0",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.14.1",
     "postcss-loader": "^3.0.0",
-    "resolve-url-loader": "^3.1.0",
-    "sass-loader": "^7.1.0",
+    "resolve-url-loader": "^3.1.1",
+    "sass-loader": "^7.3.1",
     "style-loader": "^0.23.1",
-    "uglifyjs-webpack-plugin": "^2.1.2",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.2.1"
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12"
   },
   "dependencies": {
-    "autoprefixer": "^9.4.10",
-    "babel-loader": "^8.0.5",
-    "bootstrap": "^4.3.1",
+    "autoprefixer": "^9.8.5",
+    "babel-loader": "^8.1.0",
+    "bootstrap": "^4.5.0",
     "cssnano": "^4.1.10",
     "dotenv": "^7.0.0",
-    "jquery": "^3.4.0",
+    "jquery": "^3.5.1",
     "pixrem": "^5.0.0",
-    "popper.js": "^1.14.7",
-    "postcss-preset-env": "^6.6.0",
-    "vue": "^2.6.8",
-    "vue-loader": "^15.7.0",
+    "popper.js": "^1.16.1",
+    "postcss-preset-env": "^6.7.0",
+    "vue": "^2.6.11",
+    "vue-loader": "^15.9.3",
     "vue-resource": "^1.5.1",
     "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.6.8"
+    "vue-template-compiler": "^2.6.11"
   }
 }
