--- a/package.json
+++ b/package.json
@@ -4,49 +4,43 @@
   "description": "",
   "private": true,
   "scripts": {
-    "vendorFront": "webpack --env.prefix=front --config webpack.dev.js --config-name vendorConfig",
-    "vendorAdmin": "webpack --env.prefix=admin --config webpack.dev.js --config-name vendorConfig",
-    "vendorAttachment": "webpack --config vendor/3xw/attachment/webpack.js --config-name attachmentVendorConfig",
-    "watchFront": "webpack --env.prefix=front --config webpack.dev.js --config-name themeAppConfig",
-    "watchAdmin": "webpack --env.prefix=admin --config webpack.dev.js --config-name themeAppConfig",
-    "watchAttachment": "webpack --config vendor/3xw/attachment/webpack.js --config-name attachmentConfig",
-    "build": "webpack --env.prefix=admin --config webpack.prod.js && webpack --env.prefix=front --config webpack.prod.js",
-    "buildAttachment": "webpack --config vendor/3xw/attachment/webpack.js"
+    "vendor": "webpack --config webpack.js --config-name vendor && webpack --config vendor/3xw/attachment/webpack.js --config-name attachmentVendorConfig",
+    "build": "webpack --config webpack.js && webpack --config vendor/3xw/attachment/webpack.js",
+    "watchFront": "webpack --config webpack.js --config-name app --watch --mode development && webpack --config vendor/3xw/attachment/webpack.js --config-name attachmentConfig --watch --mode development"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.3.4",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/preset-env": "^7.3.4",
-    "css-loader": "^2.1.0",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^3.0.1",
-    "mini-css-extract-plugin": "^0.5.0",
-    "node-sass": "^4.11.0",
-    "postcss-loader": "^3.0.0",
-    "resolve-url-loader": "^3.1.0",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.1",
-    "uglifyjs-webpack-plugin": "^2.1.2",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.2.1"
+    "@babel/core": "^7.12",
+    "@babel/plugin-syntax-dynamic-import": "^7.8",
+    "@babel/preset-env": "^7.12",
+    "babel-loader": "^8.1",
+    "css-loader": "^5.0",
+    "file-loader": "^6.1",
+    "mini-css-extract-plugin": "1.0",
+    "node-sass": "^4.14",
+    "postcss-loader": "^4.0",
+    "postcss-preset-env": "^6.7",
+    "resolve-url-loader": "^3.1",
+    "sass-loader": "^10.0",
+    "style-loader": "^2.0",
+    "terser-webpack-plugin": "^5.0",
+    "vue-loader": "^15.9",
+    "webpack": "^5.1",
+    "webpack-cli": "^4.1"
   },
   "dependencies": {
-    "autoprefixer": "^9.4.10",
-    "axios": "^0.19.0",
-    "babel-loader": "^8.0.5",
-    "bootstrap": "^4.3.1",
+    "autoprefixer": "^10.0",
+    "axios": "^0.20",
+    "bootstrap": "^4.5",
     "cssnano": "^4.1.10",
     "dotenv": "^7.0.0",
     "jquery": "^3.4.0",
     "pixrem": "^5.0.0",
-    "popper.js": "^1.14.7",
-    "postcss-preset-env": "^6.6.0",
+    "@popperjs/core": "^2.5",
     "vue": "^2.6.8",
     "vue-images-loaded": "^1.1.2",
-    "vue-loader": "^15.7.0",
     "vue-packery-plugin": "^1.4.8",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.1.2",
