--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "private": true,
   "scripts": {
-    "vendor": "webpack --config webpack.js --config-name vendor && webpack --config vendor/3xw/attachment/webpack.js --config-name attachmentVendorConfig",
+    "vendor": "webpack --config webpack.js --config-name vendor-front && webpack --config webpack.js --config-name vendor-admin && webpack --config vendor/3xw/attachment/webpack.js --config-name attachmentVendorConfig",
     "build": "webpack --config webpack.js && webpack --config vendor/3xw/attachment/webpack.js",
     "watchFront": "webpack --config webpack.js --config-name app --watch --mode development && webpack --config vendor/3xw/attachment/webpack.js --config-name attachmentConfig --watch --mode development"
   },
@@ -16,6 +16,7 @@
     "@babel/plugin-syntax-dynamic-import": "^7.8",
     "@babel/preset-env": "^7.12",
     "babel-loader": "^8.1",
+    "clean-webpack-plugin": "^3.0",
     "css-loader": "^5.0",
     "file-loader": "^6.1",
     "mini-css-extract-plugin": "1.0",
@@ -36,13 +37,13 @@
     "bootstrap": "^4.5",
     "cssnano": "^4.1.10",
     "dotenv": "^7.0.0",
-    "jquery": "^3.4.0",
+    "jquery": "^3.4",
     "pixrem": "^5.0.0",
-    "@popperjs/core": "^2.5",
+    "popper.js": "^1.16.1",
+    "select2": "^4.0",
     "vue": "^2.6.8",
     "vue-images-loaded": "^1.1.2",
     "vue-packery-plugin": "^1.4.8",
-    "vue-resource": "^1.5.1",
     "vue-router": "^3.1.2",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.8",
