--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "private": true,
   "scripts": {
-    "build": "webpack --config webpack.js --config-name app-front",
-    "watchFront": "webpack --config webpack.js --config-name app --watch --mode development && webpack --config vendor/3xw/attachment/webpack.js --config-name attachmentConfig --watch --mode development"
+    "build": "webpack --config webpack.js",
+    "watch": "webpack --config webpack.js --watch --mode development"
   },
   "keywords": [],
   "author": "",
