--- a/composer.json
+++ b/composer.json
@@ -22,12 +22,6 @@
     "phpunit/phpunit": "^8.5",
     "psy/psysh": "@stable"
   },
-  "repositories": [
-    {
-      "type": "vcs",
-      "url": "https://github.com/3xw/crud"
-    }
-  ],
   "autoload": {
     "psr-4": {
       "App\\": "src/"
@@ -47,8 +41,8 @@
       "@test",
       "@cs-check"
     ],
-    "cs-check": "phpcs --colors -p --standard=vendor/cakephp/cakephp-codesniffer/CakePHP src/ tests/",
-    "cs-fix": "phpcbf --colors --standard=vendor/cakephp/cakephp-codesniffer/CakePHP src/ tests/",
+    "cs-check": "phpcs --colors -p  src/ tests/",
+    "cs-fix": "phpcbf --colors -p src/ tests/",
     "stan": "phpstan analyse src/",
     "test": "phpunit --colors=always"
   },
