--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,11 @@
   "license": "MIT",
   "require": {
     "php": ">=7.2",
-    "3xw/attachment": "dev-master",
     "cakedc/users": "^9.0.0",
     "cakephp/cakephp": "^4.0",
     "cakephp/migrations": "^3.0",
     "cakephp/plugin-installer": "^1.2",
+    "friendsofcake/crud-json-api": "^1.0",
     "mobiledetect/mobiledetectlib": "^2.8"
   },
   "require-dev": {
