--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,8 @@
   "license": "MIT",
   "require": {
     "php": ">=7.2",
+    "3xw/cakephp-attachment": "dev-next",
+    "3xw/cakephp-pages": "dev-next",
     "cakedc/users": "^9.0.0",
     "cakephp/cakephp": "^4.0",
     "cakephp/migrations": "^3.0",
@@ -22,6 +24,28 @@
     "phpunit/phpunit": "^8.5",
     "psy/psysh": "@stable"
   },
+  "repositories": [
+    {
+        "type": "vcs",
+        "url": "git@github.com:3xw/cakephp-attachment.git"
+    },
+    {
+        "type": "vcs",
+        "url": "git@github.com:3xw/cakephp-bake.git"
+    },
+    {
+        "type": "vcs",
+        "url": "git@github.com:3xw/cakephp-pages.git"
+    },
+    {
+        "type": "vcs",
+        "url": "git@github.com:3xw/cakephp-tinymce.git"
+    },
+    {
+        "type": "vcs",
+        "url": "git@github.com:3xw/cakephp-utils.git"
+    }
+  ],
   "autoload": {
     "psr-4": {
       "App\\": "src/"
@@ -36,7 +60,6 @@
   "scripts": {
     "post-install-cmd": "App\\Console\\Installer::postInstall",
     "post-create-project-cmd": "App\\Console\\Installer::postInstall",
-    "post-autoload-dump": "Cake\\Composer\\Installer\\PluginInstaller::postAutoloadDump",
     "check": [
       "@test",
       "@cs-check"
