--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,8 @@
   "license": "MIT",
   "require": {
     "php": ">=7.2",
-    "3xw/cakephp-attachment": "dev-next",
-    "3xw/cakephp-pages": "dev-next",
+    "3xw/cakephp-attachment": "^4.0",
+    "3xw/cakephp-pages": "^4.0",
     "cakedc/users": "^9.0.0",
     "cakephp/cakephp": "^4.0",
     "cakephp/migrations": "^3.0",
