--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "private": true,
   "scripts": {
-    "build": "webpack --config webpack.js && webpack --config vendor/3xw/cakephp-attachment/webpack.js",
+    "build": "webpack --config webpack.js && webpack --config vendor/3xw/cakephp-attachment/webpack.js && webpack --config vendor/3xw/cakephp-pages/webpack.js && webpack --config vendor/3xw/cakephp-tinymce/webpack.js",
     "watch": "webpack --config webpack.js --mode development",
     "watchAttachment": "webpack --config vendor/3xw/cakephp-attachment/webpack.js --mode development --watch",
     "watchPages": "webpack --config vendor/3xw/cakephp-pages/webpack.js --mode development --watch",
