--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
   "require": {
     "php": ">=7.2",
     "3xw/cakephp-attachment": "^4.0",
+    "3xw/cakephp-cms": "dev-main",
     "3xw/cakephp-pages": "^4.0",
     "cakedc/users": "^9.0.0",
     "cakephp/cakephp": "^4.0",
