--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "webpack-cli": "^4.1"
   },
   "dependencies": {
+    "@vuex-orm/core": "^0.36.3",
     "autoprefixer": "^10.0",
     "axios": "^0.20",
     "bootstrap": "^4.5",
