--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "@vuex-orm/core": "^0.36.3",
+    "@wgr-sa/vuex-orm-crud": "0.0.1",
     "autoprefixer": "^10.0",
     "axios": "^0.20",
     "bootstrap": "^4.5",
