--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "webpack-cli": "^4.1"
   },
   "dependencies": {
+    "@tinymce/tinymce-vue": "^3.2.8",
     "@vuex-orm/core": "^0.36.3",
     "@wgr-sa/vuex-orm-crud": "0.0.8",
     "autoprefixer": "^10.0",
@@ -49,6 +50,7 @@
     "pixrem": "^5.0.0",
     "popper.js": "^1.16.1",
     "select2": "^4.0",
+    "tiptap": "^1.32.1",
     "vue": "2.6.11",
     "vue-images-loaded": "^1.1",
     "vue-packery-plugin": "^1.4",
