--- a/composer.json
+++ b/composer.json
@@ -8,20 +8,22 @@
     "php": ">=7.2",
     "3xw/cakephp-attachment": "dev-master as 4.1",
     "3xw/cakephp-cms": "dev-main",
-    "3xw/cakephp-pages": "^4.0",
+    "3xw/cakephp-elastic-search": "dev-master as 4.1",
     "3xw/cakephp-tinymce": "dev-master as 4.1",
     "3xw/cakephp-utils": "dev-master as 4.1",
+    "aws/aws-php-sns-message-validator": "^1.6",
+    "aws/aws-sdk-php": "^3.173",
     "cakedc/users": "^9.0.0",
+    "cakephp-fr/recaptcha": "dev-master",
     "cakephp/cakephp": "^4.0",
     "cakephp/migrations": "^3.0",
     "cakephp/plugin-installer": "^1.2",
     "friendsofcake/crud-json-api": "^1.0",
-    "mobiledetect/mobiledetectlib": "^2.8",
-    "paquettg/php-html-parser": "^3.1"
+    "mobiledetect/mobiledetectlib": "^2.8"
   },
   "require-dev": {
-    "3xw/cakephp-bake": "^4.0",
     "cakephp/bake": "^2.1",
+    "3xw/cakephp-bake": "dev-master as 4.1",
     "cakephp/cakephp-codesniffer": "^4.0",
     "cakephp/debug_kit": "^4.0",
     "josegonzalez/dotenv": "^3.2",
