--- a/package.json
+++ b/package.json
@@ -1,58 +1,57 @@
 {
   "name": "cake-webpack",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "private": true,
   "scripts": {
     "build": "webpack --config webpack.js --mode production",
-    "watch": "webpack --config webpack.js --mode development --watch"
+    "watch": "webpack --config webpack.js --mode development --watch --stats-children"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.12",
-    "@babel/plugin-syntax-dynamic-import": "^7.8",
-    "@babel/preset-env": "^7.12",
+    "@babel/core": "^7.15.0",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/preset-env": "^7.15.0",
     "babel-loader": "^8.1",
     "clean-webpack-plugin": "^3.0",
-    "css-loader": "^5.0",
-    "cssnano": "^4.1",
+    "css-loader": "^6.2.0",
+    "cssnano": "^5.0.8",
     "file-loader": "^6.1",
-    "mini-css-extract-plugin": "1.0",
-    "node-sass": "^4.14",
+    "mini-css-extract-plugin": "^2.2.0",
+    "node-sass": "^6.0.1",
     "postcss": "^8.1.2",
-    "postcss-loader": "^4.0",
+    "postcss-loader": "^6.1.1",
     "postcss-preset-env": "^6.7",
-    "resolve-url-loader": "^3.1",
-    "sass-loader": "^10.0",
-    "style-loader": "^2.0",
+    "resolve-url-loader": "^4.0.0",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^3.2.1",
     "terser-webpack-plugin": "^5.0",
     "vue-loader": "^15.9",
-    "vue-template-compiler": "2.6.11",
+    "vue-template-compiler": "^2.6.14",
     "webpack": "^5.1",
     "webpack-cli": "^4.1"
   },
   "dependencies": {
-    "@popperjs/core": "^2.8.3",
+    "@popperjs/core": "^2.9.3",
     "@vuex-orm/core": "^0.36.3",
     "@wgr-sa/vuex-orm-crud": "^0.0.11",
     "autoprefixer": "^10.0",
     "axios": "^0.21.1",
-    "bootstrap": "^5.0.0-beta2",
-    "dotenv": "^7.0.0",
+    "bootstrap": "^5.1.0",
+    "dotenv": "^10.0.0",
     "element-ui": "^2.13",
     "jquery": "^3.4",
     "moment": "^2.29.1",
     "pixrem": "^5.0.0",
-    "popper.js": "^1.16.1",
-    "select2": "^4.0",
-    "tiptap": "^1.32.1",
-    "vue": "2.6.11",
+    "select2": "^4.1.0-rc.0",
+    "vue": "2.6.14",
     "vue-images-loaded": "^1.1",
-    "vue-packery-plugin": "^1.4",
+    "vue-packery-plugin": "^1.4.8",
     "vuedraggable": "^2.24.3",
-    "vuex": "^3.1.1",
+    "vuex": "^3.6.2",
     "vuex-crud": "^0.3.2",
     "vuex-easy-access": "^3.1.7"
   }
