--- a/package.json
+++ b/package.json
@@ -1,38 +1,20 @@
 {
-  "name": "cake-webpack",
+  "name": "cake-vite",
   "version": "1.0.1",
   "description": "",
   "private": true,
   "scripts": {
-    "build": "webpack --config webpack.js --mode production",
-    "watch": "webpack --config webpack.js --mode development --watch --stats-children"
+    "build": "vite build",
+    "watch": "vite build --watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.15.0",
-    "@babel/plugin-proposal-class-properties": "^7.14.5",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.15.0",
-    "babel-loader": "^8.1",
-    "clean-webpack-plugin": "^3.0",
-    "css-loader": "^6.2.0",
-    "cssnano": "^5.0.8",
-    "file-loader": "^6.1",
-    "mini-css-extract-plugin": "^2.2.0",
-    "node-sass": "^6.0.1",
-    "postcss": "^8.1.2",
-    "postcss-loader": "^6.1.1",
-    "postcss-preset-env": "^6.7",
-    "resolve-url-loader": "^4.0.0",
-    "sass-loader": "^12.1.0",
-    "style-loader": "^3.2.1",
-    "terser-webpack-plugin": "^5.0",
-    "vue-loader": "^15.9",
-    "vue-template-compiler": "^2.6.14",
-    "webpack": "^5.1",
-    "webpack-cli": "^4.1"
+    "path": "^0.12.7",
+    "vite": "^2.5.4",
+    "vite-plugin-vue2": "^1.8.2",
+    "vue-template-compiler": "^2.6.14"
   },
   "dependencies": {
     "@popperjs/core": "^2.9.3",
