--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "select2": "^4.1.0-rc.0",
     "tinymce": "^5.10.1",
     "tiptap": "^1.32.2",
-    "vue": "2.6.14",
+    "vue": "^2.6.14",
     "vue-images-loaded": "^1.1",
     "vue-packery-plugin": "^1.4.8",
     "vuedraggable": "^2.24.3",
